# Experiments

./: README.md  pyproject.toml
.claude/hooks/: session-start.sh
scripts/: enroll_faces.py  predict_classifier.py  predict_faces.py  train_classifier.py
src/image_classifications/: __init__.py  api.py  classification_pipeline.py  face_pipeline.py  utils.py
src/photo_atlas/: __init__.py  api.py  classify.py  cli.py  config.py  db.py  demo.py  faces.py  geocode.py  indexer.py  library.py  metadata.py  models.py  search.py
src/photo_atlas/data/: cities.csv
src/photo_atlas/web/: app.js  index.html  styles.css
tests/: test_deep_faces.py  test_photo_atlas.py  test_utils_and_face_pipeline.py
