[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-classifications"
version = "0.1.0"
description = "Image classification and multi-label face recognition service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "numpy>=1.26",
  "pillow>=10.3",
  "scikit-learn>=1.5",
  "joblib>=1.4",
  "pydantic>=2.7",
]

[project.optional-dependencies]
face = ["face-recognition>=1.3"]
dev = ["pytest>=8.2"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
