[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-atlas"
version = "0.1.0"
description = "Navigate years of photos by person, scene, place and date — with deep-learning face recognition."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "numpy>=1.26",
  "pillow>=10.3",
  "scikit-learn>=1.5",
  "opencv-python-headless>=4.10",
  "joblib>=1.4",
  "pydantic>=2.7",
]

[project.optional-dependencies]
# High-accuracy alternative face embeddings via dlib.
dlib = ["face-recognition>=1.3"]
# High-resolution offline reverse geocoding (~150k cities).
geo = ["reverse_geocoder>=1.5"]
dev = ["pytest>=8.2", "httpx>=0.27"]

[project.scripts]
photo-atlas = "photo_atlas.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
photo_atlas = ["data/*.csv", "web/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
